header image and text alignement is fix now

--- a/AngularComponent/eShopping/src/app/app.component.css
+++ b/AngularComponent/eShopping/src/app/app.component.css
@@ -1,3 +1,3 @@
 .wrapper{
-    background-color: rgb(218, 233, 190);
+    background-color: rgb(120, 138, 146);
 }
