--- a/AngularComponent/eShopping/src/app/header/header.component.css
+++ b/AngularComponent/eShopping/src/app/header/header.component.css
@@ -1,21 +1,27 @@
 .header-container {
     display: flex;
     justify-content: space-between;
-    align-items: center;
   }
   
   .logo-container img {
-    width: 400px; /* Adjust the width of the logo as needed */
+    margin-left: -163px;
+    width: 600px; /* Adjust the width of the logo as needed */
     height: 400px; /* Maintain aspect ratio */
   }
-  
+  .motto-container {
+    height: 400px;
+    width: 500px;
+    background-color: aliceblue;
+  }
   .motto-container h1 {
+    margin-left: 70px;
+    margin-top: 100px;
     font-size: 40px;
     margin-bottom: 5px;
-    padding-right: 90px;
   }
   
   .motto-container p {
+    margin-left: 70px;
     font-size: 16px;
     color: #790746;
   }
